force-app/main/default/objects/DMU_Delivery_Status_Daily__c/DMU_Delivery_Status_Daily__c.object-meta.xml
<CustomObject>
    <label>DMU_Delivery_Status_Daily</label>
    <nameField>
        <displayFormat>Daily-{000000000}</displayFormat>
        <label>DMU Daily No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DMU_Delivery_Status_Daily</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>