force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <formula>IF (DAY(Document_Date__c) &gt; 9, TEXT(DAY(Document_Date__c)), &apos;0&apos;&amp;TEXT(DAY(Document_Date__c)))&amp;
IF (MONTH(Document_Date__c) &gt; 9,
TEXT(MONTH(Document_Date__c)), &apos;0&apos;&amp;TEXT(MONTH(Document_Date__c)))&amp;
TEXT(YEAR(Document_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date</label>
    <type>Text</type>
</CustomField>