force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Filter_Courier__c.field-meta.xml
<CustomField>
    <fullName>Filter_Courier__c</fullName>
    <label>Filter Courier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NCS</fullName>
            </value>
            <value>
                <fullName>KGP</fullName>
            </value>
            <value>
                <fullName>SAP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>