force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Filter_EndDate__c.field-meta.xml
<CustomField>
    <fullName>Filter_EndDate__c</fullName>
    <label>Filter EndDate</label>
    <type>Date</type>
</CustomField>