force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Filter_StartDate__c.field-meta.xml
<CustomField>
    <fullName>Filter_StartDate__c</fullName>
    <label>Filter StartDate</label>
    <type>Date</type>
</CustomField>