force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Filter_Status__c.field-meta.xml
<CustomField>
    <fullName>Filter_Status__c</fullName>
    <label>Filter Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IP</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>