force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/In_Progress__c.field-meta.xml
<CustomField>
    <fullName>In_Progress__c</fullName>
    <label>In Progress</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>