force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Not_Success__c.field-meta.xml
<CustomField>
    <fullName>Not_Success__c</fullName>
    <formula>In_Progress__c + Return_Docs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Not Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>