force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/OK__c.field-meta.xml
<CustomField>
    <fullName>OK__c</fullName>
    <label>OK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>