force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Return_Docs__c.field-meta.xml
<CustomField>
    <fullName>Return_Docs__c</fullName>
    <label>Return Docs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>