force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Sub_Type_Doc__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type_Doc__c</fullName>
    <label>Sub Type Doc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hardcopy</fullName>
            </value>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>From Jatis</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>