force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Success__c.field-meta.xml
<CustomField>
    <fullName>Success__c</fullName>
    <formula>OK__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Success</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>