force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Total_Documents__c.field-meta.xml
<CustomField>
    <fullName>Total_Documents__c</fullName>
    <formula>OK__c + In_Progress__c + Return_Docs__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>