force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>IF (TEXT(Sub_Type_Doc__c) == &apos;Hardcopy&apos;,
TEXT(Type_Doc__c) &amp; &quot; - &quot; &amp; TEXT(Sub_Type_Doc__c),
&apos;E-&apos;&amp;TEXT(Type_Doc__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type</label>
    <type>Text</type>
</CustomField>