force-app/main/default/objects/DMU_Delivery_Status_Daily__c/fields/Type_Doc__c.field-meta.xml
<CustomField>
    <fullName>Type_Doc__c</fullName>
    <label>Type Doc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>polis hardcopy</fullName>
            </value>
            <value>
                <fullName>redelivery</fullName>
            </value>
            <value>
                <fullName>epolicy</fullName>
            </value>
            <value>
                <fullName>AXA Tower</fullName>
            </value>
            <value>
                <fullName>Kartu Kesehatan</fullName>
            </value>
            <value>
                <fullName>surat hardcopy</fullName>
            </value>
            <value>
                <fullName>e-letter</fullName>
            </value>
            <value>
                <fullName>transaction statement (hardcopy)</fullName>
            </value>
            <value>
                <fullName>transaction statement (email)</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Policy BTO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>